--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
+    "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.3.30",
     "maath": "^0.10.8",
     "react": "^18.3.1",
